# webtensor

./: .gitignore  .prettierignore  Makefile  README.md  eslint.config.js  package.json  tsconfig.base.json  vitest.config.ts
.github/workflows/: docs.yml
assets/logo/: main.py  new.py  pyproject.toml
demo/: package-lock.json  package.json  pnpm-lock.yaml
docs/: .gitignore  adding-an-op.md  architecture.md  docs.json  index.mdx  ir-reference.md  next.config.mjs  next.md  package.json  plan.md  tsconfig.typedoc.json  typedoc.json  webgpu-strided-ops.md
docs-md/: adding-an-op.md  ir-reference.md
docs-md/diagrams/: backend-internals.puml  package-dependencies.puml
docs-md/onboarding/: 02-package-deep-dive.md  04-autograd.md  08-rearchitect-notes.md
docs/diagrams/: autograd-backward.md  backend-dispatch.md  backend-dispatch.puml  backend-internals.md  backend-internals.puml  execution-flow.md  execution-flow.puml  gap-map.md  mental-model.puml  onboarding-flow.md  package-map.md  package-map.puml  target-architecture.md  target-architecture.puml  tensor-lifecycle.md
docs/onboarding/: 00-start-here.md  01-system-walkthrough.md  02-package-deep-dive.md  04-autograd.md  (+13 more)
explore/: .gitignore  README.md  array-broadcasting.ipynb  cnn-mnist.ipynb  convert-mnist-to-sprite.ipynb  pyproject.toml
minitensor/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: bump-version.ts  clean.mjs  clean.ts  tag-ops.ts
smoke-test/: README.md  package.json
tests/: autograd.test.ts  elementwise.test.ts  helpers.ts  matmul.test.ts  memory.test.ts  tsconfig.json
(+179 files in other folders)
